# WeatherBalloonSoftware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project.cmake
Components/: CMakeLists.txt
Components/Camera/: CMakeLists.txt  Camera.cpp  Camera.fpp  Camera.hpp
Components/Camera/docs/: sdd.md
CoreComponent/: CMakeLists.txt  CoreComponent.cpp  CoreComponent.fpp  CoreComponent.hpp  CoreComponentTesterHelpers.cpp
CoreComponent/docs/: sdd.md
CoreComponent/test/ut/: CoreComponentTestMain.cpp  CoreComponentTester.cpp  CoreComponentTester.hpp
CoreDeployment/: CMakeLists.txt  Main.cpp  README.md
CoreDeployment/Top/: CMakeLists.txt  CoreDeploymentPackets.xml  CoreDeploymentTopology.cpp  CoreDeploymentTopology.hpp  CoreDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
